--- a/luci-app-openclash/Makefile
+++ b/luci-app-openclash/Makefile
@@ -3,7 +3,7 @@ include $(TOPDIR)/rules.mk
 PKG_NAME:=luci-app-openclash
 PKG_VERSION=0.30.0
 PKG_RELEASE:=1
-PKG_MAINTAINER:=frainzy1477&vernesong <https://github.com/vernesong/clash-for-openwrt>
+PKG_MAINTAINER:=frainzy1477&vernesong <https://github.com/vernesong/OpenClash>
 
 PKG_BUILD_DIR:=$(BUILD_DIR)/$(PKG_NAME)
 
