For clash dev: use yaml default

--- a/luci-app-openclash/Makefile
+++ b/luci-app-openclash/Makefile
@@ -51,8 +51,11 @@ if [ -f "/tmp/openclash.bak" ]; then
 	mv "/tmp/openclash.bak" "/etc/config/openclash" 2>/dev/null
 	mv "/tmp/openclash_custom_rules.list.bak" "/etc/config/openclash_custom_rules.list" 2>/dev/null
 fi
+if [ -f "/tmp/config.yaml" ]; then
+	mv "/tmp/config.yaml" "/etc/openclash/config.yaml" 2>/dev/null
+fi
 if [ -f "/tmp/config.yml" ]; then
-	mv "/tmp/config.yml" "/etc/openclash/config.yml" 2>/dev/null
+	mv "/tmp/config.yml" "/etc/openclash/config.yaml" 2>/dev/null
 fi
 endef
 
@@ -66,7 +69,7 @@ endef
 define Package/$(PKG_NAME)/postrm
 #!/bin/sh
 if [ -f "/etc/openclash/config.bak" ]; then
-	mv "/etc/openclash/config.bak" "/tmp/config.yml"
+	mv "/etc/openclash/config.bak" "/tmp/config.yaml"
 fi
 if [ -f "/etc/openclash/clash" ]; then
 	rm -rf /etc/openclash/config.* 2>/dev/null
