--- a/luci-app-openclash/Makefile
+++ b/luci-app-openclash/Makefile
@@ -1,7 +1,7 @@
 include $(TOPDIR)/rules.mk
 
 PKG_NAME:=luci-app-openclash
-PKG_VERSION:=0.32.0
+PKG_VERSION:=0.32.1
 PKG_RELEASE:=0
 PKG_MAINTAINER:=frainzy1477&vernesong <https://github.com/vernesong/OpenClash>
 
@@ -53,8 +53,7 @@ if [ -f "/tmp/openclash.bak" ]; then
 fi
 if [ -f "/tmp/config.yaml" ]; then
 	mv "/tmp/config.yaml" "/etc/openclash/config.yaml" 2>/dev/null
-fi
-if [ -f "/tmp/config.yml" ]; then
+elif [ -f "/tmp/config.yml" ]; then
 	mv "/tmp/config.yml" "/etc/openclash/config.yaml" 2>/dev/null
 fi
 endef
@@ -68,8 +67,8 @@ endef
 
 define Package/$(PKG_NAME)/postrm
 #!/bin/sh
-if [ -f "/etc/openclash/config.bak" ]; then
-	mv "/etc/openclash/config.bak" "/tmp/config.yaml"
+if [ -f "/etc/openclash/config.yaml" ]; then
+	mv "/etc/openclash/config.yaml" "/tmp/config.yaml"
 fi
 if [ -f "/etc/openclash/clash" ]; then
 	rm -rf /etc/openclash/config.* 2>/dev/null
