Add blacklist tutorials

--- a/luci-app-openclash/Makefile
+++ b/luci-app-openclash/Makefile
@@ -14,7 +14,7 @@ define Package/$(PKG_NAME)
 	SUBMENU:=3. Applications
 	TITLE:=LuCI support for clash
 	PKGARCH:=all
-	DEPENDS:=+luci +luci-base +iptables +coreutils +coreutils-nohup +bash +wget
+	DEPENDS:=+luci +luci-base +iptables +dnsmasq-full +coreutils +coreutils-nohup +bash +wget
 	MAINTAINER:=vernesong
 endef
 
