--- a/luci-app-openclash/Makefile
+++ b/luci-app-openclash/Makefile
@@ -39,7 +39,6 @@ endef
 define Package/$(PKG_NAME)/preinst
 #!/bin/sh
 if [ -f "/etc/config/openclash" ]; then
-	uci set openclash.config.enable=0 && uci commit openclash
 	cp "/etc/config/openclash" "/tmp/openclash.bak" 2>/dev/null
 	cp "/etc/config/openclash_custom_rules.list" "/tmp/openclash_custom_rules.list.bak" 2>/dev/null
 	cp "/etc/config/openclash_custom_hosts.list" "/tmp/openclash_custom_hosts.list.bak" 2>/dev/null
@@ -48,6 +47,16 @@ endef
 
 define Package/$(PKG_NAME)/postinst
 #!/bin/sh
+uci delete ucitrack.@openclash[-1] >/dev/null 2>&1
+uci add ucitrack openclash >/dev/null 2>&1
+uci set ucitrack.@openclash[-1].init=openclash >/dev/null 2>&1
+uci commit ucitrack >/dev/null 2>&1
+uci delete firewall.openclash >/dev/null 2>&1
+uci set firewall.openclash=include >/dev/null 2>&1
+uci set firewall.openclash.type=script >/dev/null 2>&1
+uci set firewall.openclash.path=/var/etc/openclash.include >/dev/null 2>&1
+uci set firewall.openclash.reload=1 >/dev/null 2>&1
+uci commit firewall >/dev/null 2>&1
 rm -rf /tmp/luci*
 if [ -f "/tmp/openclash.bak" ]; then
 	mv "/tmp/openclash.bak" "/etc/config/openclash" 2>/dev/null
@@ -64,7 +73,7 @@ endef
 define Package/$(PKG_NAME)/prerm
 #!/bin/sh
 update=$(uci get openclash.config.update 2>/dev/null)
-if [ "$update" != 1 ]; then
+if [ "$update" -ne 1 ]; then
 	rm -rf /etc/openclash/clash 2>/dev/null
 	uci set openclash.config.enable=0 && uci commit openclash
 else
@@ -90,10 +99,10 @@ fi
 	rm -rf /tmp/Proxy_Group 2>/dev/null
 	rm -rf /tmp/openclash_last_version 2>/dev/null
 	rm -rf /tmp/clash_last_version 2>/dev/null
-	uci delete firewall.openclash 2>/dev/null
-	uci commit firewall 2>/dev/null
-	uci delete ucitrack.@openclash[-1] 2>/dev/null
-	uci commit ucitrack 2>/dev/null
+	uci delete firewall.openclash >/dev/null 2>&1
+	uci commit firewall >/dev/null 2>&1
+	uci delete ucitrack.@openclash[-1] >/dev/null 2>&1
+	uci commit ucitrack >/dev/null 2>&1
 endef
 
 define Package/$(PKG_NAME)/install
