Improvements and Adapt to the latest clash dev branch's commit

--- a/luci-app-openclash/Makefile
+++ b/luci-app-openclash/Makefile
@@ -1,7 +1,7 @@
 include $(TOPDIR)/rules.mk
 
 PKG_NAME:=luci-app-openclash
-PKG_VERSION:=0.34.2
+PKG_VERSION:=0.34.3
 PKG_RELEASE:=beta
 PKG_MAINTAINER:=vernesong <https://github.com/vernesong/OpenClash>
 
@@ -30,7 +30,6 @@ define Build/Prepare
 		po2lmo $(po) $(PKG_BUILD_DIR)/$(patsubst %.po,%.lmo,$(notdir $(po)));)
 	chmod 0755 ${CURDIR}/files/etc/init.d/openclash
 	chmod -R 0755 ${CURDIR}/files/usr/share/openclash/
-	chmod -R 0755 ${CURDIR}/files/usr/lib/lua/luci/model/cbi/openclash/
 endef
 
 define Build/Configure
@@ -73,6 +72,8 @@ elif [ -f "/tmp/config.yml" ]; then
 	mv "/tmp/config.yml" "/etc/openclash/config.yaml" 2>/dev/null
 fi
 uci set openclash.config.enable=0 2>/dev/null && uci commit openclash 2>/dev/null
+chmod 0755 /etc/init.d/openclash 2>/dev/null
+chmod -R 0755 /usr/share/openclash/ 2>/dev/null
 rm -rf /tmp/luci*
 endef
 
