--- a/luci-app-openclash/files/etc/openclash/default.yaml
+++ b/luci-app-openclash/files/etc/openclash/default.yaml
@@ -43,24 +43,27 @@ authentication: # 此项将被接管
   - "user1:pass1"
   - "user2:pass2"
 
+# # experimental hosts, support wildcard (e.g. *.clash.dev Even *.foo.*.example.com)
+# # static domain has a higher priority than wildcard domain (foo.example.com > *.example.com)
+#hosts:
+#'*.clash.dev': 127.0.0.1
+#'alpha.clash.dev': '::1'
+
 dns:  # 如订阅配置无包括此项的所有DNS设置，OpenClash将自动添加
   enable: true # set true to enable dns (default is false) # 此项将被接管为true
   ipv6: false # default is false # 此项将被接管
   listen: 0.0.0.0:53 # 端口为53时将被接管为7874
   enhanced-mode: redir-host # or fake-ip # 此项将被接管
   fake-ip-range: 198.18.0.1/16 # if you don't know what it is, don't change it # 此项将被接管
-#  experimental hosts, support wildcard (e.g. *.clash.dev Even *.foo.*.example.com)
-#  static domain has a higher priority than wildcard domain (foo.example.com > *.example.com)
-#  NOTE: hosts don't work with `fake-ip`
-#  hosts: # 此项将被接管
-#  '*.clash.dev': 127.0.0.1
-#  'alpha.clash.dev': '::1'
   nameserver:
   - 114.114.114.114
-  - tls://dns.rubyfish.cn:853 # dns over tls
   - https://1.1.1.1/dns-query # dns over https
   fallback: # concurrent request with nameserver, fallback used when GEOIP country isn't CN
   - tcp://1.1.1.1
+  fallback-filter:
+    geoip: true # default
+    ipcidr: # ips in these subnets will be considered polluted
+      - 240.0.0.0/4
   
 # 以上设置您可直接覆盖到配置文件,无需更改
 # Openclash 不会对下方服务器设置进行任何更改，请确保设置正确
