--- a/luci-app-openclash/files/etc/openclash/default.yaml
+++ b/luci-app-openclash/files/etc/openclash/default.yaml
@@ -71,17 +71,20 @@ dns:  # 如订阅配置无包括此项的所有DNS设置，OpenClash将自动添
 Proxy: # 此参数必须保留,不能删除
 
 # shadowsocks
-# The types of cipher are consistent with go-shadowsocks2
-# support AEAD_AES_128_GCM AEAD_AES_192_GCM AEAD_AES_256_GCM AEAD_CHACHA20_POLY1305 AES-128-CTR AES-192-CTR AES-256-CTR AES-128-CFB AES-192-CFB AES-256-CFB CHACHA20-IETF XCHACHA20
-# In addition to what go-shadowsocks2 supports, it also supports chacha20 rc4-md5 xchacha20-ietf-poly1305
-- { name: "ss1", type: ss, server: server, port: 443, cipher: AEAD_CHACHA20_POLY1305, password: "password", udp: true }
+# The supported ciphers(encrypt methods):
+#   aes-128-gcm aes-192-gcm aes-256-gcm
+#   aes-128-cfb aes-192-cfb aes-256-cfb
+#   aes-128-ctr aes-192-ctr aes-256-ctr
+#   rc4-md5 chacha20 chacha20-ietf xchacha20
+#   chacha20-ietf-poly1305 xchacha20-ietf-poly1305
+- { name: "ss1", type: ss, server: server, port: 443, cipher: chacha20-ietf-poly1305, password: "password", udp: true }
 
 # old obfs configuration remove after prerelease
 - name: "ss2"
   type: ss
   server: server
   port: 443
-  cipher: AEAD_CHACHA20_POLY1305
+  cipher: chacha20-ietf-poly1305
   password: "password"
   plugin: obfs
   plugin-opts:
@@ -92,7 +95,7 @@ Proxy: # 此参数必须保留,不能删除
   type: ss
   server: server
   port: 443
-  cipher: AEAD_CHACHA20_POLY1305
+  cipher: chacha20-ietf-poly1305
   password: "password"
   plugin: v2ray-plugin
   plugin-opts:
