--- a/luci-app-openclash/Makefile
+++ b/luci-app-openclash/Makefile
@@ -1,7 +1,7 @@
 include $(TOPDIR)/rules.mk
 
 PKG_NAME:=luci-app-openclash
-PKG_VERSION:=0.35.6
+PKG_VERSION:=0.35.7
 PKG_RELEASE:=beta
 PKG_MAINTAINER:=vernesong <https://github.com/vernesong/OpenClash>
 
@@ -46,6 +46,11 @@ if [ -f "/etc/config/openclash" ]; then
 	cp "/etc/config/openclash_custom_hosts.list" "/tmp/openclash_custom_hosts.list.bak" >/dev/null 2>&1
 	cp "/etc/config/openclash_custom_fake_black.conf" "/tmp/openclash_custom_fake_black.conf.bak" >/dev/null 2>&1
 fi
+if [ -f "/etc/openclash/custom/openclash_custom_rules.list" ]; then
+	cp "/etc/openclash/custom/openclash_custom_rules.list" "/tmp/openclash_custom_rules.list.bak" >/dev/null 2>&1
+	cp "/etc/openclash/custom/openclash_custom_hosts.list" "/tmp/openclash_custom_hosts.list.bak" >/dev/null 2>&1
+	cp "/etc/openclash/custom/openclash_custom_fake_black.conf" "/tmp/openclash_custom_fake_black.conf.bak" >/dev/null 2>&1
+fi
 endef
 
 define Package/$(PKG_NAME)/postinst
@@ -62,15 +67,21 @@ uci set firewall.openclash.reload=1 >/dev/null 2>&1
 uci commit firewall >/dev/null 2>&1
 if [ -f "/tmp/openclash.bak" ]; then
 	mv "/tmp/openclash.bak" "/etc/config/openclash" >/dev/null 2>&1
-	mv "/tmp/openclash_custom_rules.list.bak" "/etc/config/openclash_custom_rules.list" >/dev/null 2>&1
-	mv "/tmp/openclash_custom_hosts.list.bak" "/etc/config/openclash_custom_hosts.list" >/dev/null 2>&1
-	mv "/tmp/openclash_custom_fake_black.conf.bak" "/etc/config/openclash_custom_fake_black.conf" >/dev/null 2>&1
+	mv "/tmp/openclash_custom_rules.list.bak" "/etc/openclash/custom/openclash_custom_rules.list" >/dev/null 2>&1
+	mv "/tmp/openclash_custom_hosts.list.bak" "/etc/openclash/custom/openclash_custom_hosts.list" >/dev/null 2>&1
+	mv "/tmp/openclash_custom_fake_black.conf.bak" "/etc/openclash/custom/openclash_custom_fake_black.conf" >/dev/null 2>&1
 fi
 if [ -f "/tmp/config.yaml" ]; then
-	mv "/tmp/config.yaml" "/etc/openclash/config.yaml" >/dev/null 2>&1
+	mv "/tmp/config.yaml" "/etc/openclash/config/config.yaml" >/dev/null 2>&1
 elif [ -f "/tmp/config.yml" ]; then
-	mv "/tmp/config.yml" "/etc/openclash/config.yaml" >/dev/null 2>&1
+	mv "/tmp/config.yml" "/etc/openclash/config/config.yaml" >/dev/null 2>&1
+elif [ -d "/tmp/config/" ]; then
+  mv "/tmp/config" "/etc/openclash/config"
 fi
+mkdir -p /lib/upgrade/keep.d
+cat > "/lib/upgrade/keep.d/luci-app-openclash" <<-EOF
+/etc/openclash/custom/
+EOF
 uci set openclash.config.enable=0 >/dev/null 2>&1
 uci commit openclash >/dev/null 2>&1
 chmod 0755 /etc/init.d/openclash >/dev/null 2>&1
@@ -87,15 +98,19 @@ fi
 	cp "/etc/config/openclash_custom_rules.list" "/tmp/openclash_custom_rules.list.bak" >/dev/null 2>&1
 	cp "/etc/config/openclash_custom_hosts.list" "/tmp/openclash_custom_hosts.list.bak" >/dev/null 2>&1
 	cp "/etc/config/openclash_custom_fake_black.conf" "/tmp/openclash_custom_fake_black.conf.bak" >/dev/null 2>&1
+	cp "/etc/openclash/custom/openclash_custom_rules.list" "/tmp/openclash_custom_rules.list.bak" >/dev/null 2>&1
+	cp "/etc/openclash/custom/openclash_custom_hosts.list" "/tmp/openclash_custom_hosts.list.bak" >/dev/null 2>&1
+	cp "/etc/openclash/custom/openclash_custom_fake_black.conf" "/tmp/openclash_custom_fake_black.conf.bak" >/dev/null 2>&1
 endef
 
 define Package/$(PKG_NAME)/postrm
 #!/bin/sh
-if [ -f "/etc/openclash/config.yaml" ]; then
-	mv "/etc/openclash/config.yaml" "/tmp/config.yaml"
+if [ "$(ls -ld "/etc/openclash/config/" | awk '{print int($5)}')" -gt 0 ]; then
+	mv "/etc/openclash/config" "/tmp/config"
 fi
 if [ -f "/etc/openclash/clash" ]; then
-	rm -rf /etc/openclash/config.* >/dev/null 2>&1
+	rm -rf /etc/openclash/config >/dev/null 2>&1
+	rm -rf /etc/openclash/backup >/dev/null 2>&1
 else
 	rm -rf /etc/openclash >/dev/null 2>&1
 fi
