--- a/luci-app-openclash/Makefile
+++ b/luci-app-openclash/Makefile
@@ -1,7 +1,7 @@
 include $(TOPDIR)/rules.mk
 
 PKG_NAME:=luci-app-openclash
-PKG_VERSION:=0.35.6
+PKG_VERSION:=0.36.1
 PKG_RELEASE:=beta
 PKG_MAINTAINER:=vernesong <https://github.com/vernesong/OpenClash>
 
@@ -79,7 +79,7 @@ if [ -f "/tmp/config.yaml" ]; then
 	mv "/tmp/config.yaml" "/etc/openclash/config/config.yaml" >/dev/null 2>&1
 elif [ -f "/tmp/config.yml" ]; then
 	mv "/tmp/config.yml" "/etc/openclash/config/config.yaml" >/dev/null 2>&1
-elif [ -d "/tmp/config/" ]; then
+elif [ -d "/tmp/openclash_config/" ]; then
   rm -rf "/etc/openclash/config" >/dev/null 2>&1
   mv "/tmp/openclash_config" "/etc/openclash/config" >/dev/null 2>&1
 fi
@@ -99,7 +99,8 @@ define Package/$(PKG_NAME)/prerm
 if [ ! -f "/tmp/openclash_update.sh" ]; then
 	rm -rf /etc/openclash/clash >/dev/null 2>&1
 fi
-  mv "/etc/openclash/config" "/tmp/openclash_config" >/dev/null 2>&1
+	mv "/etc/openclash/config.yaml" "/tmp/config.yaml" >/dev/null 2>&1
+	mv "/etc/openclash/config" "/tmp/openclash_config" >/dev/null 2>&1
 	cp "/etc/config/openclash" "/tmp/openclash.bak" >/dev/null 2>&1
 	cp "/etc/config/openclash_custom_rules.list" "/tmp/openclash_custom_rules.list.bak" >/dev/null 2>&1
 	cp "/etc/config/openclash_custom_hosts.list" "/tmp/openclash_custom_hosts.list.bak" >/dev/null 2>&1
