Game support beta with core form https://github.com/comzyh/clash

--- a/luci-app-openclash/Makefile
+++ b/luci-app-openclash/Makefile
@@ -31,6 +31,7 @@ define Build/Prepare
 	chmod 0755 ${CURDIR}/files/etc/init.d/openclash
 	chmod -R 0755 ${CURDIR}/files/usr/share/openclash/
 	mkdir -p ${CURDIR}/files/etc/openclash/config >/dev/null 2>&1
+	mkdir -p ${CURDIR}/files/etc/openclash/proxy_provider >/dev/null 2>&1
 	mkdir -p ${CURDIR}/files/etc/openclash/backup >/dev/null 2>&1
 endef
 
@@ -68,6 +69,7 @@ uci set firewall.openclash.path=/var/etc/openclash.include >/dev/null 2>&1
 uci set firewall.openclash.reload=1 >/dev/null 2>&1
 uci commit firewall >/dev/null 2>&1
 mkdir -p /etc/openclash/config >/dev/null 2>&1
+mkdir -p /etc/openclash/proxy_provider >/dev/null 2>&1
 mkdir -p /etc/openclash/backup >/dev/null 2>&1
 if [ -f "/tmp/openclash.bak" ]; then
 	mv "/tmp/openclash.bak" "/etc/config/openclash" >/dev/null 2>&1
@@ -82,6 +84,10 @@ elif [ -f "/tmp/config.yml" ]; then
 elif [ -d "/tmp/openclash_config/" ]; then
   rm -rf "/etc/openclash/config" >/dev/null 2>&1
   mv "/tmp/openclash_config" "/etc/openclash/config" >/dev/null 2>&1
+fi
+if [ -d "/tmp/openclash_proxy_provider/" ]; then
+  rm -rf "/etc/openclash/proxy_provider" >/dev/null 2>&1
+  mv "/tmp/openclash_proxy_provider" "/etc/openclash/proxy_provider" >/dev/null 2>&1
 fi
 mkdir -p /lib/upgrade/keep.d >/dev/null 2>&1
 cat > "/lib/upgrade/keep.d/luci-app-openclash" <<-EOF
@@ -101,6 +107,7 @@ if [ ! -f "/tmp/openclash_update.sh" ]; then
 fi
 	mv "/etc/openclash/config.yaml" "/tmp/config.yaml" >/dev/null 2>&1
 	mv "/etc/openclash/config" "/tmp/openclash_config" >/dev/null 2>&1
+	mv "/etc/openclash/proxy_provider" "/tmp/openclash_proxy_provider" >/dev/null 2>&1
 	cp "/etc/config/openclash" "/tmp/openclash.bak" >/dev/null 2>&1
 	cp "/etc/config/openclash_custom_rules.list" "/tmp/openclash_custom_rules.list.bak" >/dev/null 2>&1
 	cp "/etc/config/openclash_custom_hosts.list" "/tmp/openclash_custom_hosts.list.bak" >/dev/null 2>&1
@@ -115,6 +122,7 @@ define Package/$(PKG_NAME)/postrm
 if [ -f "/etc/openclash/clash" ]; then
 	rm -rf /etc/openclash/config >/dev/null 2>&1
 	rm -rf /etc/openclash/backup >/dev/null 2>&1
+	rm -rf /etc/openclash/proxy_provider >/dev/null 2>&1
 else
 	rm -rf /etc/openclash >/dev/null 2>&1
 fi
